<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mahiro.inandout.OrderActivity"
    android:background="@drawable/order_background"
    android:rowCount="12"
    android:columnCount="3"
    android:id="@+id/inAndOutTableLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orderText"
        android:id="@+id/orderTextView"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_columnSpan="3"
        android:layout_weight="0.1"
        android:gravity="center" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4">

        <TextView
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:text="@string/DoubleDouble"
            android:id="@+id/textView"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_rowWeight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DoubleDoubleValue"
            android:id="@+id/textView10"
            android:layout_column="13"
            android:layout_row="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/doubleDoubleEditText"
            android:layout_column="14" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4">

        <TextView
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:text="@string/Cheeseburger"
            android:id="@+id/textView2"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_rowWeight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CheeseburgerValue"
            android:id="@+id/textView11"
            android:layout_column="12"
            android:layout_row="2"
            android:layout_span="2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/cheeseburgerEditText"
            android:layout_column="14" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FrenchFries"
            android:id="@+id/textView3"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_rowWeight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FrenchFriesValue"
            android:id="@+id/textView12"
            android:layout_column="12"
            android:layout_row="3"
            android:layout_span="2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/frenchFriesEditText"
            android:layout_column="14" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Shakes"
            android:id="@+id/textView4"
            android:layout_column="0"
            android:layout_row="4"
            android:layout_rowWeight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ShakesValue"
            android:id="@+id/textView13"
            android:layout_column="12"
            android:layout_row="4"
            android:layout_span="2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText4"
            android:layout_column="14" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="50">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FountainDrinks"
            android:id="@+id/textView5"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_rowWeight="1" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Small"
            android:id="@+id/textView6"
            android:layout_column="0"
            android:layout_row="6"
            android:layout_rowWeight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SmallValue"
            android:id="@+id/textView15"
            android:layout_column="13" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText6"
            android:layout_column="14" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Medium"
            android:id="@+id/textView7"
            android:layout_column="0"
            android:layout_row="7"
            android:layout_rowWeight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MediumValue"
            android:id="@+id/textView16"
            android:layout_column="12"
            android:layout_span="2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText7"
            android:layout_column="14" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Large"
            android:id="@+id/textView8"
            android:layout_column="0"
            android:layout_row="8"
            android:layout_rowWeight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LargeValue"
            android:id="@+id/textView17"
            android:layout_column="12"
            android:layout_span="2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText8"
            android:layout_column="14" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OrderButtonText"
            android:id="@+id/button"
            android:layout_row="10"
            android:layout_column="13"
            android:layout_rowWeight="1" />
    </TableRow>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emptyText"
        android:id="@+id/textView9"
        android:layout_row="11"
        android:layout_column="0"
        android:layout_rowWeight="3"
        android:layout_weight="200" />

</TableLayout>
